修改了部分删除功能
