# src/main/java/model/Authorization.java
@@ -1,9 +1,16 @@
 package model;
 
+import java.text.SimpleDateFormat;
+import java.util.Calendar;
+
+import static constant.Constant.DATE_PATTERN;
+
 /*记录授权信息*/
 public class Authorization {
     private Long id;
     private String serial;
+    /*对应授权的锁名称*/
+    private String lockerDescription;
     /*授权者手机号*/
     private String fromAccount;
     /*被授权者手机号*/
@@ -11,12 +18,30 @@ public class Authorization {
     private String startTime;
     private String endTime;
     private String description;
-    /*星期几，周期性时间，数组字符串类型,例如String weekday="[1,3,5]"表示每个周一，周三，周五*/
+    /*星期几，周期性时间，字符串类型,例如String weekday="1,3,5"表示每个周一，周三，周五*/
     private String weekday;
     /*每天的开始时间，周期性时间，格式为hh:mm:ss*/
     private String dailyStartTime;
     /*每天的开始时间，周期性时间，格式为hh:mm:ss*/
     private String dailyEndTime;
+
+    public Authorization() {
+        setDefault();
+    }
+
+    private void setDefault() {
+        Calendar calendar = Calendar.getInstance();
+        SimpleDateFormat sdf = new SimpleDateFormat(DATE_PATTERN);
+
+        this.startTime = sdf.format(calendar.getTime());
+        calendar.add(Calendar.DAY_OF_MONTH, 7);
+        this.endTime = sdf.format(calendar.getTime());
+
+        this.description = "Authorization";
+        this.weekday = "1,2,3,4,5,6,7";
+        this.dailyStartTime = "00:00:00";
+        this.dailyEndTime = "23:59:00";
+    }
 
     public String getSerial() {
         return serial;
@@ -47,7 +72,14 @@ public class Authorization {
     }
 
     public void setStartTime(String startTime) {
-        this.startTime = startTime;
+        if (startTime == null) {
+            Calendar calendar = Calendar.getInstance();
+            SimpleDateFormat sdf = new SimpleDateFormat(DATE_PATTERN);
+
+            this.startTime = sdf.format(calendar.getTime());
+        } else {
+            this.startTime = startTime;
+        }
     }
 
     public String getEndTime() {
@@ -55,7 +87,14 @@ public class Authorization {
     }
 
     public void setEndTime(String endTime) {
-        this.endTime = endTime;
+        if (endTime == null) {
+            Calendar calendar = Calendar.getInstance();
+            SimpleDateFormat sdf = new SimpleDateFormat(DATE_PATTERN);
+            calendar.add(Calendar.DAY_OF_MONTH, 7);
+            this.endTime = sdf.format(calendar.getTime());
+        } else {
+            this.endTime = endTime;
+        }
     }
 
     public String getDescription() {
@@ -71,7 +110,11 @@ public class Authorization {
     }
 
     public void setWeekday(String weekday) {
-        this.weekday = weekday;
+        if (weekday == null) {
+            this.weekday = "1,2,3,4,5,6,7";
+        } else {
+            this.weekday = weekday;
+        }
     }
 
     public String getDailyStartTime() {
@@ -79,7 +122,11 @@ public class Authorization {
     }
 
     public void setDailyStartTime(String dailyStartTime) {
-        this.dailyStartTime = dailyStartTime;
+        if (dailyStartTime == null) {
+            this.dailyStartTime = "00:00:00";
+        } else {
+            this.dailyStartTime = dailyStartTime;
+        }
     }
 
     public String getDailyEndTime() {
@@ -87,7 +134,11 @@ public class Authorization {
     }
 
     public void setDailyEndTime(String dailyEndTime) {
-        this.dailyEndTime = dailyEndTime;
+        if (dailyEndTime == null) {
+            this.dailyEndTime = "23:59:00";
+        } else {
+            this.dailyEndTime = dailyEndTime;
+        }
     }
 
     public Long getId() {
@@ -96,5 +147,13 @@ public class Authorization {
 
     public void setId(Long id) {
         this.id = id;
+    }
+
+    public String getLockerDescription() {
+        return lockerDescription;
+    }
+
+    public void setLockerDescription(String lockerDescription) {
+        this.lockerDescription = lockerDescription;
     }
 }
