# src/main/webapp/WEB-INF/api/swagger.yaml
@@ -69,7 +69,7 @@ paths:
             $ref: "#/definitions/Locker"
       responses:
         200:
-          description: "Operation successsful"
+          description: "Operation successful"
         401:
           description: "Unauthorized request"
         500:
@@ -200,10 +200,10 @@ paths:
       responses:
         200:
           description: "successful operation"
-        500:
-          description: "unknow error"
         401:
           description: "unauthorized request"
+        500:
+          description: "unknown error"
   /authorization/add:
     post:
       tags:
@@ -224,7 +224,7 @@ paths:
         200:
           description: "Operation successsful"
         500:
-          description: "unknow error"
+          description: "unknown error"
         401:
           description: "Unauthorized request"
   /authorization/update:
@@ -272,16 +272,24 @@ paths:
               sign:
                 type: "string"
               ids:
+                description: "id and serial object array"
                 type: "array"
                 items:
-                  type: "integer"
-                  format: "int64"
+                  type: "object"
+                  properties:
+                    id:
+                      type: "integer"
+                      format: "int64"
+                      description: "Authorization Id"
+                    serial:
+                      type: "string"
+                      description: "Serial number of locker"
             example:
               appid: "15851841387"
               sign: "43052bd7afce21cfa1b8929b560a2057"
               ids:
-                - 10000
-                - 10001
+                - id:1000 ,serial: "abdcef"
+                - id:10001 , serial: "defghi"
       responses:
         200:
           description: "Operation successsful"
@@ -451,6 +459,12 @@ definitions:
       description:
         type: "string"
         description: "authorization name"
+      weekday:
+        type: "string"
+      dailyStartTime:
+        type: "string"
+      dailyEndTime:
+        type: "string"
     example:
       appid: "15851841387"
       sign: "54b4f929165b75ebb3f3834733c12f1a"
@@ -459,6 +473,9 @@ definitions:
       startTime: "2019-06-05 00:00:00"
       endTime: "2019-06-06 00:00:00"
       description: "First Authorization"
+      weekday: "1,2,3,4,5,6,7"
+      dailyStartTime: "00:00:00"
+      dailyEndTime: "23:59:00"
   AuthorizationUpdate:
     type: "object"
     properties:
